--- a/index.html
+++ b/index.html
@@ -197,23 +197,25 @@
           </li>
         </ul>
       </section>
+      <div class="benefits">
       <section class="advantages">
         <h2 class="advantages-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
         <ul class="advantages-list">
-          <li class="advantages-item basic-text">
+          <li class="advantages-item-ice-cream basic-text">
             Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.
           </li>
-          <li class="advantages-item basic-text">
+          <li class="advantages-item-sheet basic-text">
             Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.
           </li>
-          <li class="advantages-item basic-text">
+          <li class="advantages-item-cow basic-text">
             Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.
           </li>
-          <li class="advantages-item basic-text">
+          <li class="advantages-item-thermometer basic-text">
             Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.
           </li>
         </ul>
       </section>
+      </div>
       <article class="advertising">
         <h2 class="basic-text">Новое в нашем блоге</h2>
         <a class="advertising-title" href="blog.html">10 способов сервировки фруктовых щербетов к столу</a>
