--- a/index.html
+++ b/index.html
@@ -253,19 +253,21 @@
         </form>
         </div>
       </section>
+      <div class="contacts-ice-cream">
       <section class="contacts">
         <h2 class="visually-hidden"> Контакты</h2>
-        <h3 class="contacts-subtitle">Адрес главного офиса и офлайн-магазина:</h3>
+        <h3 class="basic-text">Адрес главного офиса и офлайн-магазина:</h3>
         <address class="contacts-address">
           <p class="contacts-address-text">наб. реки Карповки, 5 лит П, Санкт-Петербург</p>
         </address>
-        <h3 class="contacts-subtitle">Для заказов по телефону:</h3>
+        <h3 class="basic-text">Для заказов по телефону:</h3>
         <address class="contacts-address">
           <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </address>
         <p class="contacts-phone-time">(с 10 до 20 ежедневно)</p>
         <a class="button button-feedback" href="#">Форма обратной связи</a>
       </section>
+      </div>
     </main>
       <footer class="page-footer">
         <section class="social">
