--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
           </li>
         </ul>
       </section>
-      <div class="benefits">
       <section class="advantages">
+        <div class="advantages-container">
         <h2 class="advantages-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
         <ul class="advantages-list">
           <li class="advantages-item advantages-item-ice-cream basic-text">
@@ -214,8 +214,8 @@
             Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.
           </li>
         </ul>
+        </div>
       </section>
-      </div>
       <article class="advertising">
         <h2 class="basic-text">Новое в нашем блоге</h2>
         <a class="advertising-title" href="blog.html">10 способов сервировки фруктовых щербетов к столу</a>
