Правит форматирование кода

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="search.html">
-              <span class="visually-hidden">
-                Поиск
-              </span>
+              <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
@@ -56,9 +54,7 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link navigation-basket" href="basket.html">
-              <span class="visually-hidden">
-                Корзина
-              </span>
+              <span class="visually-hidden">Корзина</span>
             </a>
           </li>
         </ul>
@@ -199,21 +195,21 @@
       </section>
       <section class="advantages">
         <div class="advantages-container">
-        <h2 class="advantages-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-        <ul class="advantages-list">
-          <li class="advantages-item advantages-item-ice-cream basic-text">
-            Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.
-          </li>
-          <li class="advantages-item advantages-item-sheet basic-text">
-            Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.
-          </li>
-          <li class="advantages-item advantages-item-cow basic-text">
-            Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.
-          </li>
-          <li class="advantages-item advantages-item-thermometer basic-text">
-            Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.
-          </li>
-        </ul>
+          <h2 class="advantages-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+          <ul class="advantages-list">
+            <li class="advantages-item advantages-item-ice-cream basic-text">
+              Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.
+            </li>
+            <li class="advantages-item advantages-item-sheet basic-text">
+              Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.
+            </li>
+            <li class="advantages-item advantages-item-cow basic-text">
+              Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.
+            </li>
+            <li class="advantages-item advantages-item-thermometer basic-text">
+              Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.
+            </li>
+          </ul>
         </div>
       </section>
       <article class="advertising">
@@ -221,52 +217,52 @@
         <a class="advertising-title" href="blog.html">10 способов сервировки фруктовых щербетов к столу</a>
       </article>
       <div class="email">
-      <section class="newsletter">
-        <h2 class="visually-hidden">Получайте лучшие предложения</h2>
-        <p class="basic-text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-          <label for="newsletter-email">Email</label>
-          <input class="field" placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
-          <button class="button newsletter-button" type="submit">Отправить</button>
-        </form>
-      </section>
+        <section class="newsletter">
+          <h2 class="visually-hidden">Получайте лучшие предложения</h2>
+          <p class="basic-text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label for="newsletter-email">Email</label>
+            <input class="field" placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
+            <button class="button newsletter-button" type="submit">Отправить</button>
+          </form>
+        </section>
       </div>
       <section class="delivery">
         <h2 class="delivery-title">Доставка любимого мороженого на дом</h2>
         <p class="basic-text">Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите доставку мороженого на дом, и курьер привезёт вам ваш заказ в течение часа!</p>
         <div class="delivery-all-form">
-        <p class="basic-text">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
-        <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
-          <p class="delivery-forms delivery-form-date">
-            <label class="form-label" for="date">Дата</label>
-            <input type="date" id="date" name="date" placeholder="01.04.2020">
-          </p>
-          <p class="delivery-forms delivery-form-phone">
-            <label class="form-label" for="tel">Телефон</label>
-            <input type="tel" id="tel" name="tel" placeholder="8 800 9990000">
-          </p>
-          <p class="delivery-forms delivery-form-address">
-            <label class="form-label" for="delivery-address">Адрес</label>
-            <input type="text" id="delivery-name" name="delivery-name" placeholder="ул. Большая Конюшенная, 19/8">
-          </p>
-          <button class="button button-pink" type="submit">Отправить</button>
-        </form>
+          <p class="basic-text">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
+          <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
+            <p class="delivery-forms delivery-form-date">
+              <label class="form-label" for="date">Дата</label>
+              <input type="date" id="date" name="date" placeholder="01.04.2020">
+            </p>
+            <p class="delivery-forms delivery-form-phone">
+              <label class="form-label" for="tel">Телефон</label>
+              <input type="tel" id="tel" name="tel" placeholder="8 800 9990000">
+            </p>
+            <p class="delivery-forms delivery-form-address">
+              <label class="form-label" for="delivery-address">Адрес</label>
+              <input type="text" id="delivery-name" name="delivery-name" placeholder="ул. Большая Конюшенная, 19/8">
+            </p>
+            <button class="button button-pink" type="submit">Отправить</button>
+          </form>
         </div>
       </section>
       <div class="contacts-ice-cream">
-      <section class="contacts">
-        <h2 class="visually-hidden"> Контакты</h2>
-        <h3 class="basic-text">Адрес главного офиса и офлайн-магазина:</h3>
-        <address class="contacts-address">
-          <p class="contacts-address-text">наб. реки Карповки, 5 лит П, Санкт-Петербург</p>
-        </address>
-        <h3 class="basic-text">Для заказов по телефону:</h3>
-        <address class="contacts-address">
-          <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        </address>
-        <p class="contacts-phone-time">(с 10 до 20 ежедневно)</p>
-        <a class="button button-feedback" href="#">Форма обратной связи</a>
-      </section>
+        <section class="contacts">
+          <h2 class="visually-hidden"> Контакты</h2>
+          <h3 class="basic-text">Адрес главного офиса и офлайн-магазина:</h3>
+          <address class="contacts-address">
+            <p class="contacts-address-text">наб. реки Карповки, 5 лит П, Санкт-Петербург</p>
+          </address>
+          <h3 class="basic-text">Для заказов по телефону:</h3>
+          <address class="contacts-address">
+            <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          </address>
+          <p class="contacts-phone-time">(с 10 до 20 ежедневно)</p>
+          <a class="button button-feedback" href="#">Форма обратной связи</a>
+        </section>
       </div>
     </main>
       <footer class="page-footer">
