--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </nav>
     </header>
 
-    <main class="main-index">
+    <main class="main-container main-index">
       <h1 class="visually-hidden">Магазин мороженого Gllacy Shop</h1>
       <section class="main-gallery">
         <h2 class="visually-hidden">Галерея мороженого</h2>
