--- a/catalog.html
+++ b/catalog.html
@@ -15,6 +15,7 @@
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Каталог</a>
+            <!-- подменю
             <ul class="navigation-list navigation-list-catalog">
               <li class="navigation-item">
                 <a class="navigation-link navigation-link-new" href="new.html">Новинки</a>
@@ -32,6 +33,7 @@
                 <a class="navigation-link" href="melorin.html">Мелорин</a>
               </li>
             </ul>
+            -->
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="delivery_and_payment.html">Доставка и оплата</a>
@@ -65,7 +67,7 @@
       </nav>
     </header>
 
-    <main class="main-index">
+    <main class="main-container main-index">
       <header class="inner-header">
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
