--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Каталог</a>
+            <!-- подменю
             <ul class="navigation-list-catalog">
               <li class="navigation-item">
                 <a class="navigation-link navigation-link-main" href="new.html">Новинки</a>
@@ -32,6 +33,7 @@
                 <a class="navigation-link" href="melorin.html">Мелорин</a>
               </li>
             </ul>
+            -->
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="delivery_and_payment.html">Доставка и оплата</a>
