--- a/index.html
+++ b/index.html
@@ -215,20 +215,22 @@
             </ul>
           </div>
         </section>
-        <article class="advertising">
-          <h2 class="basic-text">Новое в нашем блоге</h2>
-          <a class="advertising-title" href="blog.html">10 способов сервировки фруктовых щербетов к столу</a>
-        </article>
-        <div class="email">
-          <section class="newsletter">
-            <h2 class="visually-hidden">Получайте лучшие предложения</h2>
-            <p class="basic-text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-              <label for="newsletter-email">Email</label>
-              <input class="field" placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
-              <button class="button newsletter-button" type="submit">Отправить</button>
-            </form>
-          </section>
+        <div class="advertising-email-container">
+          <article class="advertising-email advertising">
+            <h2 class="basic-text">Новое в нашем блоге</h2>
+            <a class="advertising-title" href="blog.html">10 способов сервировки фруктовых щербетов к столу</a>
+          </article>
+          <div class="advertising-email email">
+            <section class="newsletter">
+              <h2 class="visually-hidden">Получайте лучшие предложения</h2>
+              <p class="basic-text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+              <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+                <label for="newsletter-email">Email</label>
+                <input class="field" placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
+                <button class="button newsletter-button" type="submit">Отправить</button>
+              </form>
+            </section>
+          </div>
         </div>
         <section class="delivery">
           <h2 class="delivery-title">Доставка любимого мороженого на дом</h2>
