добавляет сетку футеру

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a class="navigation-logo">
           <img class="logo" src="images/logo_gllacy_shop.svg" width="138" height="56" alt="Логотип Gllacy Shop">
         </a>
-        <ul class="navigation-list">
+        <ul class="navigation-list-header">
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Каталог</a>
             <!-- подменю
@@ -272,47 +272,49 @@
       </div>
     </main>
       <footer class="page-footer">
-        <section class="social">
-          <h2 class="visually-hidden">Наши соцсети</h2>
-          <ul class="social-list">
-            <li class="social-item">
-              <a class="button" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Телеграм</span>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="button" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">ВКонтакте</span>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">YouTube</span>
-              </a>
-            </li>
-          </ul>
-        </section>
-        <section class="footer-navigation">
-          <h2 class="visually-hidden">Навигация</h2>
-          <ul class="navigation-list">
-            <li class="navigation-item">
-              <a class="navigation-link navigation-link-heart" href="#">Для поставщиков</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">О производстве</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">Наши документы</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">Экологические стандарты</a>
-            </li>
-          </ul>
-        </section>
-        <section class="htmlacademy">
-          <h2 class="visually-hidden">Данные о компании разрабодчике</h2>
-          <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a> &copy; 2023</p>
-        </section>
+        <div class="page-footer-container">
+          <section class="social">
+            <h2 class="visually-hidden">Наши соцсети</h2>
+            <ul class="social-list">
+              <li class="social-item">
+                <a class="button" href="https://t.me/htmlacademy">
+                  <span class="visually-hidden">Телеграм</span>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="button" href="https://vk.com/htmlacademy">
+                  <span class="visually-hidden">ВКонтакте</span>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                  <span class="visually-hidden">YouTube</span>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="footer-navigation">
+            <h2 class="visually-hidden">Навигация</h2>
+            <ul class="navigation-list">
+              <li class="navigation-item">
+                <a class="navigation-link navigation-link-heart" href="#">Для поставщиков</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="#">О производстве</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="#">Наши документы</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="#">Экологические стандарты</a>
+              </li>
+            </ul>
+          </section>
+          <section class="htmlacademy">
+            <h2 class="visually-hidden">Данные о компании разрабодчике</h2>
+            <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a> &copy; 2023</p>
+          </section>
+        </div>
       </footer>
   </body>
 </html>
