--- a/catalog.html
+++ b/catalog.html
@@ -15,25 +15,24 @@
         <ul class="navigation-list-header">
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Каталог</a>
-            <!-- подменю
-            <ul class="navigation-list-catalog">
-              <li class="navigation-item">
-                <a class="navigation-link navigation-link-main" href="new.html">Новинки</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="creamy.html">Сливочное</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="sherbets.html">Щербеты</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="fruit_ice.html">Фруктовый лед</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="melorin.html">Мелорин</a>
-              </li>
-            </ul>
-            -->
+            <!-- WIP -->
+              <ul class="navigation-list-catalog">
+                <li class="navigation-item">
+                  <a class="navigation-link navigation-link-main" href="new.html">Новинки</a>
+                </li>
+                <li class="navigation-item">
+                  <a class="navigation-link" href="creamy.html">Сливочное</a>
+                </li>
+                <li class="navigation-item">
+                  <a class="navigation-link" href="sherbets.html">Щербеты</a>
+                </li>
+                <li class="navigation-item">
+                  <a class="navigation-link" href="fruit_ice.html">Фруктовый лед</a>
+                </li>
+                <li class="navigation-item">
+                  <a class="navigation-link" href="melorin.html">Мелорин</a>
+                </li>
+              </ul>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="delivery_and_payment.html">Доставка и оплата</a>
