--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <a class="navigation-logo">
+        <a class="navigation-logo" href="index.html">
           <img class="logo" src="images/logo_gllacy_shop.svg" width="138" height="56" alt="Логотип Gllacy Shop">
         </a>
         <ul class="navigation-list-header">
