Исправляет грамматическую ошибку

--- a/catalog.html
+++ b/catalog.html
@@ -371,7 +371,7 @@
           </ul>
         </section>
         <section class="htmlacademy">
-          <h2 class="visually-hidden">Данные о компании разрабодчике</h2>
+          <h2 class="visually-hidden">Данные о компании разработчике</h2>
           <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a> &copy; 2023</p>
         </section>
       </div>
